--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
